--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HKalbasi/eslint-plugin-toplevel"
+  },
   "keywords": ["eslint", "config", "functional"],
   "author": "hkalbasi",
   "license": "GPL-3.0-or-later",
